[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vannotator"
version = "0.0.1"
authors = [
  { name="Mike Hamilton", email="mike.hamilton7@gmail.com" },
]
description = "A simple variant annotator package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bio-comp/vannotator"
"Bug Tracker" = "https://github.com/bio-comp/vannotator/issues"