[tool.poetry]
name = "vannotator"
version = "0.1.0"
description = ""
authors = ["bio-comp <mike.hamilton7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.13"
PyVCF = "^0.6.8"
Sphinx = "^7.2.5"
dataclasses = "^0.8"
tenacity = "^8.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
